<resources>
    <string name="app_name">HealthAssist</string>
    <string name="action_settings">Settings</string>
    <string name="page_name">My Profile</string>
    <string name="categories">15 Locations</string>
    <string name="symptoms">3 Symptoms</string>
    <string name="page_name2">My Patients</string>
    <string name="patient1">HIGH PRIORITY: VOMITING BLOOD.</string>
    <string name="patient2">HIGH PRIORITY: DARK/RED URINE.</string>
    <string name="patient3">Medium priority: Blood in stool.</string>
    <string name="patient4">Medium priority: Heart Palpitations.</string>
    <string name="patient5">No need for concern.</string>
    <string name="patient6">No need for concern.</string>
    <string name="patient7">No need for concern.</string>
    <string name="patient8">No need for concern.</string>
    <string name="patient9">No need for concern.</string>

</resources>
