<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgdoc"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/page_name2"
                android:textSize="26sp"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_alignParentRight="true"
                android:src="@drawable/doctor"
                android:layout_width="85dp"
                android:layout_height="85dp" />
        </RelativeLayout>

        <GridLayout
            android:columnCount="1"
            android:rowCount="9"
            android:alignmentMode="alignMargins"
            android:columnOrderPreserved="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/uwu"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/girl"
                            />
                        <TextView
                            android:layout_marginStart="100dp"
                            android:text="@string/patient1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/uwu"
                            android:layout_marginStart="4dp"
                            android:text="Jane Doe"
                            android:textColor="#6F6F6F"
                            android:textSize="16sp" />

                    </RelativeLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/uwu2"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/man" />
                        <TextView
                            android:layout_marginStart="100dp"
                            android:text="@string/patient2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/uwu2"
                            android:text="John Smith"
                            android:textColor="#6F6F6F"
                            android:textSize="16sp" />

                    </RelativeLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/uwu3"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/man2" />
                        <TextView
                            android:layout_marginStart="100dp"
                            android:text="@string/patient3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_below="@id/uwu3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="James Lee"
                            android:textColor="#6F6F6F"
                            android:textSize="16sp" />

                    </RelativeLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/uwu4"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/girl2" />
                        <TextView
                            android:layout_marginStart="100dp"
                            android:text="@string/patient4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_below="@id/uwu4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:text="Jill Baker"
                            android:textColor="#6F6F6F"
                            android:textSize="16sp" />

                    </RelativeLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/uwu5"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/man3" />
                        <TextView
                            android:layout_marginStart="100dp"
                            android:text="@string/patient5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_below="@id/uwu5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="George Bane"
                            android:textColor="#6F6F6F"
                            android:textSize="16sp" />

                    </RelativeLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/uwu6"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/boy" />
                        <TextView
                            android:layout_marginStart="100dp"
                            android:text="@string/patient6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_below="@id/uwu6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Will Turner"
                            android:textColor="#6F6F6F"
                            android:textSize="16sp" />

                    </RelativeLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/uwu7"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/boy2" />
                        <TextView
                            android:layout_marginStart="100dp"
                            android:text="@string/patient7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_below="@id/uwu7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Jacob Well"
                            android:textColor="#6F6F6F"
                            android:textSize="16sp" />
                    </RelativeLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/uwu8"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/man4" />
                        <TextView
                            android:layout_marginStart="100dp"
                            android:text="@string/patient8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_below="@id/uwu8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7dp"
                            android:text="Cam Hill"
                            android:textColor="#6F6F6F"
                            android:textSize="16sp" />
                    </RelativeLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                app:cardElevation="6dp"
                app:cardCornerRadius="12dp"
                android:layout_margin="12dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/uwu9"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/man5" />
                        <TextView
                            android:layout_marginStart="100dp"
                            android:text="@string/patient9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_below="@id/uwu9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Dan Davids"
                            android:textColor="#6F6F6F"
                            android:textSize="16sp" />
                    </RelativeLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </GridLayout>
    </LinearLayout>
</ScrollView>